    variance of each label's pixel: only use the pixel's value in the
    '--instd' image (which can also be the variance with the '--variance'
    option). This is useful in scenarios where the STD/variance image is
    not just the sky STD/Variance, but also has the signal's contribution.

  --mean-error: Measure the error of the mean for each label (object or
    clump).

*** astscript-radial-profile

  --azimuth option can be called multiple times so the profile is generated
    over discrete azimuthal regions of the input. For example if called
    with '--azimuth=30,50 --azimuth=210,250', the profile (or polar plot if
    requested) will be generated only using pixels within these two
    azimuthal ranges (all other pixels are ignored). Suggested and
    implemented by Ignacio Ruiz Cejudo.

*** Library

  - gal_units_sblim_diff: calculate the difference in surface brighntess
    limit only assuming a different effective radius of a different
    telescope and/or a different exposure time.

  - gal_units_wavelength_flux_density_to_jy: convert given wavelength flux
    density (erg/s/cm^2/A) to Janskys.

** Removed features
** Changed features
** Bugs fixed

  - bug #66216: NaN values in MakeProfile outputs for very small profiles
    (smaller than a pixel even after accounting for the truncation
    factor). Reported by Alejandro Camazón Pinilla.

  - bug #66262: color-faint-gray crashes when using --graykernelfwhm. Found
    and fixed by Samane Raji.

  - bug #66280: Convolve's check images not in same directory as output.

  - bug #66303: astscript-color-faint-gray crashes if using 4th
    channel. Reported by Elizabeth Sola and fixed by Raul Infante-Sainz.

  - bug #66308: Library's 'gal_wcs_img_to_world' and 'gal_wcs_world_to_img'
    returned inverse names when the operation was not in-place. Found and
    fixed by Giacomo Lorenzetti.

  - bug #66309: Match crashes if kdtree is not set. Found and fixed by
    Giacomo Lorenzetti.




